# s3autocp

./: README.md  pyproject.toml  setup.py
src/s3autocp/: __init__.py  s3autocp.py
