[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s3autocp"
version = "0.0.6"
authors = [
  { name = "Jouni Tenhunen", email = "jouni.tenhunen@nitor.com" },
  { name = "Kalle Ahlström", email = "kalle.ahlstrom@nitor.com" },
]
description = "A tool for copying build folders to S3 with guessed Content-Type and Cache-Control"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = ["boto3"]

[project.urls]
"Homepage" = "https://github.com/NitorCreations/s3autocp"
